# seq_loop

./: CMakeLists.txt  README  package.xml
include/: loop05.hpp  seq05.hpp
launch/: seq_loop.launch.py
scripts/: plot_results.py  timing_results.csv  timing_results_LOAD_loopERR.csv  timing_results_NOLOAD.csv  timing_results_weird.csv
scripts/tests/: timing_resultsNOLOAD.csv  timing_results_LOAD.csv  timing_results_LOAD2.csv  timing_results_LOAD3.csv  timing_results_NOLOAD.csv  timing_results_NOLOAD2.csv  timing_results_NOLOAD3.csv
src/: loop05.cpp  seq05.cpp
