<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>seq_loop</name>
  <version>0.0.0</version>
  <description>ROS2 Communication Test </description>
  <maintainer email="alexey05072003@gmail.com">Aleksei Obshatko</maintainer>
  <maintainer email="solisnlmax@gmail.com">Max Solis</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
